feat: Add network mode support with socat/ncat (v0.4.0)
✨ New Features:
- TCP network mode for multi-client support via socat
- Cross-platform client support (Windows, Ubuntu, macOS)

📚 Documentation:
- Add ARCHITECTURE-RESEAU.md
- Add QUICK-CONFIG.md
- Update INSTALLATION-GUIDE.md
- Update README.md

Version: 0.4.0

--- a/moodle-mcp-server/.gitignore
+++ b/moodle-mcp-server/.gitignore
@@ -2,3 +2,22 @@ node_modules/
 build/
 *.log
 .env*node_modules/
+
+# Fichiers de backup
+*.backup
+*.old
+*_backup/
+README_backup.md
+
+# Fichiers temporaires
+*.tmp
+
+# Build
+build/
+
+# Environment
+.env
+
+# Node
+node_modules/
+node_modules1/
